testsuite/tests/printer/T15761.hs
{-# LANGUAGE TypeFamilies #-}

data family (a + b) c d

data instance (Int + Bool) Double = Float
